--- a/index.html
+++ b/index.html
@@ -23,8 +23,14 @@
     </div>
 
     <div class="tab-content" id="content2">
-      <h2>About Us</h2>
-      <p>This is the about tab.</p>
+      <h2>Video</h2>
+      <p>This is the video.</p>
+
+       <!-- Video from Google Drive -->
+  <h2 style="text-align: center;">Google Drive Video Example</h2>
+  <div class="video-container">
+   <iframe src="https://drive.google.com/file/d/1bvcId_F87Z_B5BeTHgazskM3UD05_N0p/preview" width="640" height="480" allow="autoplay"></iframe>
+
     </div>
 
     <div class="tab-content" id="content3">
