--- a/index.html
+++ b/index.html
@@ -1,43 +1,71 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tabbed Website</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Simple Architecture Site</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="tabs">
-    <input type="radio" name="tab" id="tab1" checked>
-    <label for="tab1" class="tab-label">Home</label>
 
-    <input type="radio" name="tab" id="tab2">
-    <label for="tab2" class="tab-label">About</label>
+<!-- Navbar -->
+<div class="navbar">
+  <a href="#home"><b>BR</b> Architects</a>
+  <div class="nav-right">
+    <a href="#projects">Projects</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
+  </div>
+</div>
 
-    <input type="radio" name="tab" id="tab3">
-    <label for="tab3" class="tab-label">Contact</label>
+<!-- Header -->
+<header id="home" class="header">
+  <div class="header-text">
+    <h1><span class="bold">BR</span> Architects</h1>
+  </div>
+</header>
 
-    <div class="tab-content" id="content1">
-      <h2>Welcome to My Website</h2>
-      <p>This is the home tab.</p>
-    </div>
+<!-- Main content -->
+<div class="container">
 
-    <div class="tab-content" id="content2">
-      <h2>Video</h2>
-      <p>This is the video.</p>
-
-       <!-- Video from Google Drive -->
-  <h2 style="text-align: center;">Google Drive Video Example</h2>
+  <!-- Projects -->
+  <section id="watch">
+    <h2>Watch Video</h2>
+   <!-- Video from Google Drive -->
+  <h3 style="text-align: center;">Video</h3>
   <div class="video-container">
    <iframe src="https://drive.google.com/file/d/1bvcId_F87Z_B5BeTHgazskM3UD05_N0p/preview" width="640" height="480" allow="autoplay"></iframe>
 
     </div>
+  </section>
 
-    <div class="tab-content" id="content3">
-      <h2>Contact Info</h2>
-      <p>This is the contact tab.</p>
+  <!-- About -->
+  <section id="about">
+    <h2>About</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut enim ad minim veniam...</p>
+    <div class="team">
+      <div><img src="/w3images/team2.jpg" alt="John"><h3>John Doe</h3><p>CEO & Founder</p></div>
+      <div><img src="/w3images/team1.jpg" alt="Jane"><h3>Jane Doe</h3><p>Architect</p></div>
+      <div><img src="/w3images/team3.jpg" alt="Mike"><h3>Mike Ross</h3><p>Architect</p></div>
+      <div><img src="/w3images/team4.jpg" alt="Dan"><h3>Dan Star</h3><p>Architect</p></div>
     </div>
-  </div>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email us at <strong>contact@example.com</strong></p>
+    <img src="/w3images/map.jpg" alt="Map" class="map">
+  </section>
+
+</div>
+
+<!-- Footer -->
+<footer>
+  <p>Powered by <a href="https://www.w3schools.com/w3css/">w3.css</a></p>
+</footer>
+
 </body>
 </html>
 
