--- a/index.html
+++ b/index.html
@@ -11,37 +11,28 @@
 
 <!-- Navbar -->
 <div class="navbar">
-  <a href="#home"><b>BR</b> Architects</a>
+  <a href="#home"><b>30MFF</b>I'M CEO</a>
   <div class="nav-right">
-    <a href="#projects">Projects</a>
-    <a href="#about">About</a>
-    <a href="#contact">Contact</a>
+    <a href="#Home">Home</a>
+    <a href="#About">About</a>
+    <a href="#Watch">Watch</a>
+    <a href="#Reflection">Reflection</a>
+    <a href="#Contact">Contact</a>
   </div>
 </div>
 
 <!-- Header -->
-<header id="home" class="header">
+<header id="Home" class="header">
   <div class="header-text">
-    <h1><span class="bold">BR</span> Architects</h1>
+    <h1><span class="I'M CEO">30MFF</span>Afra Binjerais</h1>
   </div>
 </header>
 
 <!-- Main content -->
 <div class="container">
 
-  <!-- Projects -->
-  <section id="watch">
-    <h2>Watch Video</h2>
-   <!-- Video from Google Drive -->
-  <h3 style="text-align: center;">Video</h3>
-  <div class="video-container">
-   <iframe src="https://drive.google.com/file/d/1bvcId_F87Z_B5BeTHgazskM3UD05_N0p/preview" width="640" height="480" allow="autoplay"></iframe>
-
-    </div>
-  </section>
-
   <!-- About -->
-  <section id="about">
+  <section id="About">
     <h2>About</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut enim ad minim veniam...</p>
     <div class="team">
@@ -49,6 +40,16 @@
       <div><img src="/w3images/team1.jpg" alt="Jane"><h3>Jane Doe</h3><p>Architect</p></div>
       <div><img src="/w3images/team3.jpg" alt="Mike"><h3>Mike Ross</h3><p>Architect</p></div>
       <div><img src="/w3images/team4.jpg" alt="Dan"><h3>Dan Star</h3><p>Architect</p></div>
+    </div>
+  </section>
+
+   <section id="Watch">
+    <h2>Watch Video</h2>
+   <!-- Video from Google Drive -->
+  <h3 style="text-align: center;">Video</h3>
+  <div class="video-container">
+   <iframe src="https://drive.google.com/file/d/1bvcId_F87Z_B5BeTHgazskM3UD05_N0p/preview" width="640" height="480" allow="autoplay"></iframe>
+
     </div>
   </section>
 
