--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
     </div>
   </section>
 
+  <!-- About Section -->
+  
+     <img src="img/archery.jpg" alt="Archery" width="500" height="850">
+      <p class="w3-large">Archery has been my source of escaping reality ever since I started it as a hobby back in 2013. This ancient art of precision and focus has a unique way of grounding me, offering a much-needed respite from the chaos of everyday life. Drawing the bowstring and aiming at the target requires complete concentration, effectively silencing the noise of external worries and thoughts. Each shot, whether it hits the bullseye or not, brings a sense of accomplishment and progress.</p>
+      <p class="w3-large">The rhythmic nature of archery practice creates a meditative state, where time seems to slow down, and the only thing that matters is the alignment of my breath with the release of the arrow. This singular focus helps clear my mind, allowing me to return to daily challenges with a renewed sense of clarity and calm. It's honestly amazing how activities like archery can help one recharge and find clarity amidst the busyness of life. The discipline and patience cultivated through archery also translate into other areas of life, fostering a more balanced and mindful approach to everyday tasks.</p>
+      <p class="w3-large">Furthermore, being in nature, where many archery ranges are set, enhances this experience. The tranquility of the outdoors, combined with the rhythmic practice of shooting arrows, creates a profound sense of peace. It's a reminder of the simplicity and beauty that can be found in moments of stillness and focused effort. Archery is not just a sport or a hobby; for me, it's a sanctuary where I can retreat, reflect, and rejuvenate.</p>
+    </div>
+  </div>
+
    <section id="Watch">
     <h2>Watch Video</h2>
    <!-- Video from Google Drive -->
