--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
 <!-- Header -->
 <header id="Home" class="header">
   <div class="header-text">
-    <h1><span class="I'M CEO">30MFF</span>Afra Binjerais</h1>
+    <h1><span class="I'M CEO">30MFF</span> Afra Binjerais</h1>
+  </div>
+  <div class="container">
+    <img src="media elements/home.jpeg" alt="Image" class="image">
+    <div class="overlay">
+      <div class="text">I'M CEO</div>
+    </div>
   </div>
 </header>
 
