--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,6 +25,7 @@
   <div class="header-text">
     <h1><span class="I'M CEO">30MFF</span> Afra Binjerais</h1>
   </div>
+  <!-- Container for image and overlay -->
   <div class="container">
     <img src="media elements/home.jpeg" alt="Image" class="image">
     <div class="overlay">
@@ -40,20 +40,18 @@
   <!-- About -->
   <section id="About">
     <h2>About</h2>
-     <img src="media elements/About.jpg" alt="About" width="500" height="850">
-      <p class="w3-large">Archery has been my source of escaping reality ever since I started it as a hobby back in 2013. This ancient art of precision and focus has a unique way of grounding me, offering a much-needed respite from the chaos of everyday life. Drawing the bowstring and aiming at the target requires complete concentration, effectively silencing the noise of external worries and thoughts. Each shot, whether it hits the bullseye or not, brings a sense of accomplishment and progress.</p>
-      <p class="w3-large">The rhythmic nature of archery practice creates a meditative state, where time seems to slow down, and the only thing that matters is the alignment of my breath with the release of the arrow. This singular focus helps clear my mind, allowing me to return to daily challenges with a renewed sense of clarity and calm. It's honestly amazing how activities like archery can help one recharge and find clarity amidst the busyness of life. The discipline and patience cultivated through archery also translate into other areas of life, fostering a more balanced and mindful approach to everyday tasks.</p>
-      <p class="w3-large">Furthermore, being in nature, where many archery ranges are set, enhances this experience. The tranquility of the outdoors, combined with the rhythmic practice of shooting arrows, creates a profound sense of peace. It's a reminder of the simplicity and beauty that can be found in moments of stillness and focused effort. Archery is not just a sport or a hobby; for me, it's a sanctuary where I can retreat, reflect, and rejuvenate.</p>
-    </div>
-  </div>
+    <img src="media elements/About.jpg" alt="About" width="500" height="850">
+    <p class="w3-large">Archery has been my source of escaping reality ever since I started it as a hobby back in 2013. This ancient art of precision and focus has a unique way of grounding me, offering a much-needed respite from the chaos of everyday life. Drawing the bowstring and aiming at the target requires complete concentration, effectively silencing the noise of external worries and thoughts. Each shot, whether it hits the bullseye or not, brings a sense of accomplishment and progress.</p>
+    <p class="w3-large">The rhythmic nature of archery practice creates a meditative state, where time seems to slow down, and the only thing that matters is the alignment of my breath with the release of the arrow. This singular focus helps clear my mind, allowing me to return to daily challenges with a renewed sense of clarity and calm. It's honestly amazing how activities like archery can help one recharge and find clarity amidst the busyness of life. The discipline and patience cultivated through archery also translate into other areas of life, fostering a more balanced and mindful approach to everyday tasks.</p>
+    <p class="w3-large">Furthermore, being in nature, where many archery ranges are set, enhances this experience. The tranquility of the outdoors, combined with the rhythmic practice of shooting arrows, creates a profound sense of peace. It's a reminder of the simplicity and beauty that can be found in moments of stillness and focused effort. Archery is not just a sport or a hobby; for me, it's a sanctuary where I can retreat, reflect, and rejuvenate.</p>
+  </section>
 
-   <section id="Watch">
+  <!-- Watch Video -->
+  <section id="Watch">
     <h2>Watch Video</h2>
-   <!-- Video from Google Drive -->
-  <h3 style="text-align: center;">Video</h3>
-  <div class="video-container">
-   <iframe src="https://drive.google.com/file/d/1bvcId_F87Z_B5BeTHgazskM3UD05_N0p/preview" width="640" height="480" allow="autoplay"></iframe>
-
+    <h3 style="text-align: center;">Video</h3>
+    <div class="video-container">
+      <iframe src="https://drive.google.com/file/d/1bvcId_F87Z_B5BeTHgazskM3UD05_N0p/preview" width="640" height="480" allow="autoplay"></iframe>
     </div>
   </section>
 
