--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Simple Architecture Site</title>
+  <title>Slide in Overlay Effect</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <!-- Navbar -->
 <div class="navbar">
-  <a href="#home"><b>30MFF</b>I'M CEO</a>
+  <a href="#home"><b>30MFF</b>Afra binjerais</a>
   <div class="nav-right">
     <a href="#Home">Home</a>
     <a href="#About">About</a>
@@ -21,18 +21,13 @@
 </div>
 
 <!-- Header -->
-<header id="Home" class="header">
-  <div class="header-text">
-    <h1><span class="I'M CEO">30MFF</span> Afra Binjerais</h1>
-  </div>
-  <!-- Container for image and overlay -->
-  <div class="container">
-    <img src="media elements/home.jpeg" alt="Image" class="image">
-    <div class="overlay">
-      <div class="text">I'M CEO</div>
-    </div>
-  </div>
-</header>
+<h2>Slide in Overlay from the Left</h2>
+<p>Hover over the image to see the effect.</p>
+
+<div class="container">
+  <img src="media elements/home.jpeg" alt="Image" class="image"> <!-- Updated image path -->
+  <div class="overlay"> </div>
+</div>
 
 <!-- Main content -->
 <div class="container">
