--- a/index.html
+++ b/index.html
@@ -21,12 +21,10 @@
 </div>
 
 <!-- Header -->
-<h2>Slide in Overlay from the Left</h2>
-<p>Hover over the image to see the effect.</p>
-
 <div class="container">
   <img src="media elements/home.jpeg" alt="Image" class="image"> <!-- Updated image path -->
   <div class="overlay"> </div>
+   <div class="text">I'm CEO</div>
 </div>
 
 <!-- Main content -->
