--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="container">
   <img src="media elements/home.jpeg" alt="Image" class="image"> <!-- Updated image path -->
   <div class="overlay"> </div>
-   <div class="text">The last title is mine</div>
+   <div class="text">The Last Title is Mine</div>
 </div>
 
 <!-- Main content -->
@@ -60,7 +60,7 @@
   <p> This film began with a simple observation: how titles alone can carry meaning, even without knowing the full story behind them. As I walked through the screening room hallway at NYUAD — a space usually meant to celebrate finished films — I started to notice how much power was held just in the names themselves. They hinted at identity, emotion, transformation.</p> 
   <p> I wanted to reframe that hallway, not as a gallery of student work, but as a narrative in progress — one that reflected not only others’ creativity, but also my own path. By isolating the titles and building momentum toward a final declaration, “I’m CEO,” the film became about authorship, self-definition, and choosing how you want to be seen.</p>
   <p> This was a personal experiment in using existing materials to tell a new story. It’s quiet, short, and stripped down — but intentional in every frame</p>
-  
+
   <h3>References</h3>
   <ul>
     <li><strong>Camera:</strong> iPhone 16</li>
