--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
   <!-- Watch Video -->
   <section id="Watch">
     <h2>Watch Video</h2>
-    <h3 style="text-align: center;">Video</h3>
     <div class="video-container">
       <iframe src="https://drive.google.com/file/d/1bvcId_F87Z_B5BeTHgazskM3UD05_N0p/preview" width="640" height="480" allow="autoplay"></iframe>
     </div>
@@ -57,9 +56,9 @@
  <!-- Reflection -->
 <section id="Reflection">
   <h2>Reflection</h2>
-  <p> This film began with a simple observation: how titles alone can carry meaning, even without knowing the full story behind them. As I walked through the screening room hallway at NYUAD — a space usually meant to celebrate finished films — I started to notice how much power was held just in the names themselves. They hinted at identity, emotion, transformation.</p> 
-  <p> I wanted to reframe that hallway, not as a gallery of student work, but as a narrative in progress — one that reflected not only others’ creativity, but also my own path. By isolating the titles and building momentum toward a final declaration, “I’m CEO,” the film became about authorship, self-definition, and choosing how you want to be seen.</p>
-  <p> This was a personal experiment in using existing materials to tell a new story. It’s quiet, short, and stripped down — but intentional in every frame</p>
+  <p> This film began with a simple observation: how titles alone can carry meaning, even without knowing the full story behind them. As I walked through the screening room hallway at NYUAD (a space usually meant to celebrate finished films) I started to notice how much power was held just in the names themselves. They hinted at identity, emotion, transformation.</p> 
+  <p> I wanted to reframe that hallway, not as a gallery of student work, but as a narrative in progress; one that reflected not only others’ creativity, but also my own path. By isolating the titles and building momentum toward a final declaration, “Still CEO B***h” the film became about authorship, self-definition, and choosing how you want to be seen.</p>
+  <p> This was a personal experiment in using existing materials to tell a new story. It’s quiet, short, and stripped down — but intentional in every frame.</p>
 
   <h3>References</h3>
   <ul>
