--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 
   <!-- Contact -->
-  <section id="contact">
+  <section id="Contact">
     <h2>Contact</h2>
     <p>Email us at <strong>contact@example.com</strong></p>
   </section>
