--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
 <!-- Contact -->
 <section id="Contact">
   <h2>Contact</h2>
-  <p>Email us at <strong>contact@example.com</strong></p>
-  
+  <p>If you have any questions or feedback, feel free to reach out!</p>
   <!-- Contact Form -->
   <div class="container">
     <form action="action_page.php">
