--- a/index.html
+++ b/index.html
@@ -69,13 +69,12 @@
   </ul>
 </section>
 
-
 <!-- Contact -->
 <section id="Contact">
   <h2>Contact</h2>
   <p>If you have any questions or feedback, feel free to reach out!</p>
   <!-- Contact Form -->
-  <div class="container">
+  <div class="contact-form-container">
     <form action="action_page.php">
       
       <label for="fname">First Name</label>
@@ -94,7 +93,6 @@
     </form>
   </div>
 </section>
-
 
 </div>
 
