--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div class="about-container">
     <img src="media elements/About.jpg" alt="About" width="500" height="850" class="about-image">
     <div class="about-text">
-      <p class="w3-large">“The last title is mine” is a short film set in the quiet, familiar hallway outside the NYU Abu Dhabi film screening rooms; a space lined with posters showcasing the creative work of students past and present. At first glance, it appears to be a walk through student film history. But this film isnt about the stories behind those posters, its about the titles in front of them.</p>
+      <p class="w3-large">“The Last Title is Mine” is a short film set in the quiet, familiar hallway outside the NYU Abu Dhabi film screening rooms; a space lined with posters showcasing the creative work of students past and present. At first glance, it appears to be a walk through student film history. But this film isnt about the stories behind those posters, its about the titles in front of them.</p>
       <p class="w3-large">Each film cover featured in the piece is treated not as a project summary, but as a symbolic chapter. The titles themselves become a narrative a sequence of names that reflect growth, agency, transformation. As the film progresses, the camera slowly zooms in, narrowing its focus, until it lands on one final title: “Still CEO B***h”</p>
       <p class="w3-large">This isnt a film about the industry. Its about identity. About authorship. It plays with the idea that in a world full of roles, scripts, and expectations, you can still choose your own title - and claim it. The setting, a hallway meant to display other peoples stories, becomes the perfect stage for telling a quiet, metaphorical one of my own.</p>
     </div>
