--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <div class="navbar">
   <a href="#home"><b>30MFF</b>  Afra binjerais</a>
   <div class="nav-right">
-    <a href="#Home">Home</a>
+    <a href="#Home">
+    <img src="media elements/home_colored.png" alt="Home" class="home-icon">
+    </a>
     <a href="#About">About</a>
     <a href="#Watch">Watch</a>
     <a href="#Reflection">Reflection</a>
